// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aa check blur for input 1`] = `
Object {
  "data": Array [
    "",
    "",
    "",
  ],
  "erross": Array [
    "Oczekiwano poprawnej daty",
    "Oczekiwano poprawnego wieku",
    "Oczekiwano hasła do biosu",
  ],
  "inputs": Array [
    Object {
      "errorForForm": "Oczekiwano poprawnej daty",
      "errorForInput": null,
      "value": "",
    },
    Object {
      "errorForForm": "Oczekiwano poprawnego wieku",
      "errorForInput": null,
      "value": "",
    },
    Object {
      "errorForForm": "Oczekiwano hasła do biosu",
      "errorForInput": null,
      "value": "",
    },
  ],
}
`;

exports[`aa check blur for input 2`] = `
Object {
  "data": Array [
    "",
    "",
    "",
  ],
  "erross": Array [
    "Oczekiwano poprawnej daty",
    "Oczekiwano poprawnego wieku",
    "Oczekiwano hasła do biosu",
  ],
  "inputs": Array [
    Object {
      "errorForForm": "Oczekiwano poprawnej daty",
      "errorForInput": "Oczekiwano poprawnej daty",
      "value": "",
    },
    Object {
      "errorForForm": "Oczekiwano poprawnego wieku",
      "errorForInput": null,
      "value": "",
    },
    Object {
      "errorForForm": "Oczekiwano hasła do biosu",
      "errorForInput": null,
      "value": "",
    },
  ],
}
`;

exports[`aa check blur for input 3`] = `
Object {
  "data": Array [
    "1322",
    "",
    "",
  ],
  "erross": Array [
    "Oczekiwano poprawnej daty",
    "Oczekiwano poprawnego wieku",
    "Oczekiwano hasła do biosu",
  ],
  "inputs": Array [
    Object {
      "errorForForm": "Oczekiwano poprawnej daty",
      "errorForInput": "Oczekiwano poprawnej daty",
      "value": "1322",
    },
    Object {
      "errorForForm": "Oczekiwano poprawnego wieku",
      "errorForInput": null,
      "value": "",
    },
    Object {
      "errorForForm": "Oczekiwano hasła do biosu",
      "errorForInput": null,
      "value": "",
    },
  ],
}
`;

exports[`aa check blur for input 4`] = `
Object {
  "data": Array [
    "1410",
    "",
    "",
  ],
  "erross": Array [
    "Oczekiwano poprawnego wieku",
    "Oczekiwano hasła do biosu",
  ],
  "inputs": Array [
    Object {
      "errorForForm": null,
      "errorForInput": null,
      "value": "1410",
    },
    Object {
      "errorForForm": "Oczekiwano poprawnego wieku",
      "errorForInput": null,
      "value": "",
    },
    Object {
      "errorForForm": "Oczekiwano hasła do biosu",
      "errorForInput": null,
      "value": "",
    },
  ],
}
`;
